improved error handling & user model connections

--- a/views/500.ejs
+++ b/views/500.ejs
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Страница не найдена</title>
+  <title>Внутренняя ошибка сервера</title>
   <link rel="stylesheet" href="/assets/css/forms.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -15,9 +15,9 @@
 		<img src="./assets/img/100x.png" height="90">
 		
 	</header>
-    <h2>Ошибка 404. Страница не найдена</h2>
+    <h2>Ошибка 500. Внутренняя ошибка сервера.</h2>
     <div class="row">
-        <p>К сожалению, запрашиваемая вами страница не была найдена.</p>
+        <p>К сожалению, при работе с сервером возникла непредвиденная ошибка. Попробуйте снова через несколько минут.</p>
     </div>
 </div>
 
