--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,16 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Calendar</title>
+  <title>Войти</title>
   <link rel="stylesheet" href="./assets/css/forms.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div id="navbar">
-
-</div>
 <form id="cal" action="/login" method="post">
  	<header>
 		<img src="./assets/img/100x.png" height="90">
