--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Добавить мероприятие</title>
+  <title>Редактировать мероприятие</title>
   <link rel="stylesheet" href="/assets/css/forms.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
